--- a/_src/sass/blocks/3-benefit.scss
+++ b/_src/sass/blocks/3-benefit.scss
@@ -239,6 +239,7 @@
 
       &:nth-child(6) {
         padding-top: 38px;
+        padding-bottom: 106px;
       }
 
       &:nth-child(4) {
@@ -255,6 +256,8 @@
     @include mw(359px) {
       padding-left: 27%;
     }
+
+
 
 
     &--even {
@@ -429,9 +432,6 @@
   color: #36544F;
   font-weight: 600;
 
-  &__all {
-    font-size: 55px;
-  }
 
 
 }
