--- a/_src/sass/blocks/4-consultation.scss
+++ b/_src/sass/blocks/4-consultation.scss
@@ -28,14 +28,20 @@
 
   @include mw($dt) {
     padding-top: 80.3%;
+
+    &::after {
+      bottom: 89px;
+    }
   }
 
   @include mw($empty) {
     padding-top: 0;
-    // background-image: linear-gradient(174.91deg, #272622 -21.51%, #24231F 73.29%, rgba(34, 33, 29, 0) 89.06%);
-    ;
-    padding-bottom: 463px;
+    // padding-bottom: 463px;
     overflow: hidden;
+  }
+
+  @include mw($ph) {
+    // padding-bottom: 316px;
   }
 
 
@@ -98,12 +104,11 @@
       top: 0;
       padding-left: 21px;
       padding-right: 21px;
-      width: calc(100% - 40px);
+      width: 100%;
     }
 
     @include mw($empty) {
       max-width: 100%;
-      max-width: 522px;
       position: relative;
       transform: none;
       left: auto;
@@ -112,12 +117,27 @@
       padding-left: 10px;
       padding-right: 10px;
       padding-top: 128px;
+      padding-bottom: 497px;
+    }
+
+    @include mw($tb) {
+      width: calc(100% - 44px);
+      max-width: 522px;
     }
 
     @include mw($ph) {
       padding-left: 5px;
       padding-right: 5px;
       padding-top: 97px;
+      padding-bottom: 316px;
+    }
+
+    @include mw(380px) {
+      width: calc(100% - 28px);
+    }
+
+    @include mw($min-ph) {
+      padding-bottom: 252px;
     }
 
   }
@@ -154,6 +174,10 @@
       padding-left: 0;
 
     }
+
+    @include mw($ph) {
+      max-width: 345px;
+    }
   }
 
   &__left {
@@ -176,6 +200,14 @@
     @include mw($empty) {
       max-width: none;
       margin-bottom: 82px;
+    }
+
+    @include mw($ph) {
+      margin-bottom: 67px;
+    }
+
+    @include mw($min-ph) {
+      margin-bottom: 72px;
     }
 
 
@@ -237,6 +269,10 @@
     @include mw($ph) {
       margin-bottom: 51px;
     }
+
+    @include mw($min-ph) {
+      margin-bottom: 39px;
+    }
   }
 }
 
@@ -245,6 +281,11 @@
   &__top {
     display: flex;
     align-items: center;
+
+    @include mw($ph) {
+      justify-content: space-between;
+      max-width: 334px;
+    }
   }
 
   &__num {
@@ -268,6 +309,7 @@
 
     @include mw($ph) {
       font-size: 39px;
+      margin-right: 0;
     }
   }
 
@@ -297,6 +339,10 @@
       line-height: 40px;
     }
 
+    @include mw($ph) {
+      @include font-size(4rem);
+    }
+
     &--top {}
 
     &--bottom {
@@ -323,7 +369,6 @@
 
 .title {
 
-  &--usual {}
 
   &--white {
     color: $white;
@@ -343,6 +388,14 @@
 
     @include mw($ldt) {
       margin-top: 33px;
+    }
+
+    @include mw($ph) {
+      margin-top: 42px;
+    }
+
+    @include mw($min-ph) {
+      margin-top: 27px;
     }
   }
 
@@ -393,6 +446,14 @@
     @include mw($ph) {
       font-size: 20px;
       line-height: 24px;
+      margin-left: 15px;
+      max-width: none;
+      width: 245px;
+    }
+
+    @include mw($min-ph) {
+      font-size: 18px;
+      width: 220px;
     }
   }
 }
@@ -407,6 +468,20 @@
       background-image: linear-gradient(0deg, #E6E7E2, #E6E7E2);
       align-items: center;
       margin-bottom: 67px;
+
+    }
+
+    @include mw($ph) {
+      margin-bottom: 63px;
+    }
+
+    @include mw($min-ph) {
+      flex-direction: column;
+      max-width: 254px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-bottom: 11px;
+      margin-bottom: 49px;
 
     }
   }
@@ -435,13 +510,25 @@
         width: 1px;
         background-color: #34443F;
         right: -16px;
+
+        @include mw($ph) {
+          right: -4px;
+        }
+
+        @include mw(370px) {
+          content: none;
+        }
+
       }
 
     }
 
     @include mw(600px) {
-      font-size: 18px;
+      // font-size: 18px;
+      @include font-size(1.1rem);
     }
+
+
 
   }
 
@@ -470,6 +557,15 @@
       font-size: 33px;
       margin-left: 33px;
     }
+
+    @include mw($ph) {
+      @include font-size(3rem);
+      margin-left: 20px;
+    }
+
+    @include mw(370px) {
+      margin-left: 0;
+    }
   }
 
   &__bottom {
@@ -491,6 +587,10 @@
       flex-direction: column;
       padding-top: 0;
       padding-left: 0;
+    }
+
+    @include mw($min-ph) {
+      padding-left: 30px;
     }
   }
 
@@ -520,6 +620,14 @@
       top: -2px;
       left: 13px;
     }
+
+    @include mw($ph) {
+      left: 0;
+    }
+
+    @include mw($min-ph) {
+      left: 30px;
+    }
   }
 
   &__bonus {
@@ -540,6 +648,17 @@
       margin-bottom: 13px;
       padding-left: 97px;
     }
+
+    @include mw($ph) {
+      padding-left: 78px;
+      margin-bottom: 10px;
+    }
+
+    @include mw($min-ph) {
+      padding-left: 62px;
+      margin-bottom: 5px;
+    }
+
   }
 
   &__text {
@@ -562,34 +681,259 @@
       font-size: 22px;
       margin-left: 10px;
     }
+
+    @include mw($ph) {
+      font-size: 20px;
+      margin-left: 0;
+    }
+
+    @include mw($min-ph) {
+      font-size: 18px;
+    }
   }
 }
 
 .slider {
 
-  &__inner {}
+  &__inner {
+    display: flex;
+    align-items: center;
 
-  &__left {}
+    @include mw($empty) {
+      flex-direction: column-reverse;
+    }
+  }
+
+  &__left {
+    width: 50%;
+    // max-width: 961px;
+    margin-left: 0;
+    margin-right: 0;
+
+    @include mw($empty) {
+      width: 100%;
+      max-width: none;
+    }
+  }
 
   &__wrapper {}
 
-  &__item {}
+  &__item {
+    padding-top: 66.8%;
+  }
 
-  &__img {}
+  &__img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
 
-  &__right {}
+    @include mw($empty) {
+      // display: block;
+      // left: auto;
+      // margin-right: auto;
+    }
+  }
+
+  &__right {
+    width: 36%;
+    max-width: 687px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 108px;
+
+    @include mw($ldt) {
+      margin-top: 40px;
+    }
+
+    @include mw($dt) {
+      width: 40%;
+      margin-top: 0;
+    }
+
+    @include mw($empty) {
+      padding-top: 110px;
+      margin-bottom: 36px;
+      width: 100%;
+      max-width: none;
+
+    }
+
+    @include mw($ph) {
+      padding-top: 90px;
+    }
+
+    @include mw($min-ph) {
+      padding-top: 100px;
+      margin-bottom: 50px;
+    }
+
+  }
 
   &__box {}
 
-  &__slogan {}
+  &__slogan {
+    @include font-size(45px);
+    line-height: 50px;
+    color: #C0845E;
+    position: relative;
+    padding-top: 36px;
+    margin-bottom: 61px;
 
-  &__control {}
+    @include mw($ldt) {
+      font-size: 40px;
+      line-height: 45px;
+      margin-bottom: 36px;
 
-  &__pagination {}
+    }
 
-  &__prev {}
+    @include mw($dt) {
+      font-size: 35px;
+      margin-bottom: 50px;
+    }
 
-  &__next {}
+    @include mw($empty) {
+      max-width: 401px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    @include mw($tb) {
+      font-size: 30px;
+      line-height: 40px;
+      padding-top: 28px;
+      max-width: 369px;
+      margin-bottom: 101px;
+    }
+
+    @include mw($ph) {
+      font-size: 26px;
+      line-height: 34px;
+      max-width: 321px;
+      margin-bottom: 59px;
+    }
+
+    @include mw($min-ph) {
+      font-size: 24px;
+      line-height: 32px;
+      max-width: 278px;
+      margin-bottom: 27px;
+    }
+
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 1px;
+      width: 203px;
+      background-color: #C0845E;
+
+      @include mw($ldt) {
+        width: 193px;
+      }
+
+      @include mw($ph) {
+        width: 168px;
+      }
+
+    }
+
+
+  }
+
+
+  &__control {
+    display: flex;
+
+    @include mw($empty) {
+      justify-content: center;
+    }
+  }
+
+  &__pagination {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  &__bullet {
+    display: block;
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(#454547, 0);
+    transform: rotate(45deg);
+    position: relative;
+    transition: 0.3s;
+
+
+
+    &::after {
+      content: "";
+      @include centered();
+      width: 4px;
+      height: 4px;
+      border-radius: 50%;
+      background-color: #454547;
+    }
+
+  }
+
+  & .swiper-pagination-bullet-active {
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    border-color: rgba(#454547, 0.8);
+    margin-left: 10px;
+    margin-right: 10px;
+
+    @include mw($ph) {
+      width: 35px;
+      height: 35px;
+    }
+  }
+
+  &__prev {
+    position: relative;
+    top: auto;
+    left: auto;
+    display: none;
+  }
+
+  &__next {
+    top: auto;
+    position: relative;
+    right: auto;
+    margin-top: 0;
+    width: 100px;
+    height: 59px;
+    background-image: url(/img/svg/right-arrow.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    margin-left: 51px;
+    transition: 0.3s;
+
+    @include mw($ph) {
+      margin-left: 25px;
+      width: 80px;
+
+      background-size: cover;
+      background-position: 100% 50%;
+    }
+
+    @include hocus() {
+      transform: translateX(10px);
+    }
+
+    &::after {
+      content: none;
+    }
+
+  }
 }
 
 .swiper-container {}
@@ -606,17 +950,91 @@
 
 .how {
 
-  &__inner {}
+  &__inner {
+    padding-top: 108px;
 
-  &__box {}
+    @include mw($ldt) {
+      padding-top: 112px;
+    }
+  }
 
-  &__title {}
+  &__box {
+    padding-left: 56px;
 
-  &__list {}
+    @include mw($ldt) {
+      padding-left: 147px;
+    }
+  }
 
-  &__item {}
+  &__title {
+    margin-bottom: 57px;
+  }
 
-  &__num {}
+  &__list {
+    padding-left: 155px;
+    position: relative;
 
-  &__text {}
+    &::after {
+      content: "";
+      position: absolute;
+      width: 65px;
+      height: 65px;
+      background-image: url(/img/svg/arr.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+      left: 14px;
+      bottom: -20px;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 2px;
+      height: calc(100% - 14px);
+      bottom: 9px;
+      left: 44px;
+      background-color: #405A26;
+
+    }
+  }
+
+  &__item {
+    display: flex;
+
+    &+li {
+      margin-top: 31px;
+    }
+  }
+
+  &__num {
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 50px;
+    text-transform: uppercase;
+    color: #C0845E;
+    display: block;
+    width: 61px;
+  }
+
+  &__text {
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 24px;
+    color: #000000;
+    width: 100%;
+    max-width: 860px;
+    margin-left: 23px;
+  }
+}
+
+.title {
+  &--all {
+    font-size: 55px;
+    line-height: 65px;
+
+    @include mw($ldt) {
+      font-size: 50px;
+
+    }
+  }
 }
