--- a/_src/pug/helpers/arrays.pug
+++ b/_src/pug/helpers/arrays.pug
@@ -7,3 +7,5 @@
 - const cons_top = ['2 грамотных планировочных решения с\u00A0зонированием и расстановкой мебели','Стилевой и цветовой коллаж с\u00A0индивидуальными вариантами решений под ваш запрос','Советы по материалам, размещению коммуникаций, организации освещения','Идеи, которые позволят взглянуть на дом по-новому','Подбор мебели под бюджет']
 
 - const how = ['Вы отправляете фотографии комнат, пожелания, стилевые предпочтения, ритм жизни семьи','Мы создаем концепцию - коллаж с подобранными элементами интерьера, которые будут гармонично вписываться в ваш дом','Подберем несколько вариантов мебели для преображения вашего интерьера','Презентуем подготовленные предложения и ответим на все ваши вопросы лично в офисе или онлайн в Zoom','Высылаем все согласованные материалы и видеозапись презентации, если она проходила в режиме онлайн']
+
+- let record = 1
