--- a/_src/sass/blocks/2-promo.scss
+++ b/_src/sass/blocks/2-promo.scss
@@ -207,7 +207,13 @@
     padding-top: 9px;
     padding-bottom: 12px;
     border: none;
-    @include btn-border-drawing($green-two, $text-dark, 2px, bottom, right);
+    background-color: rgba($white, 0);
+    transition: 0.3s;
+    border: 2px solid #405A26;
+
+    @include hocus() {
+      background-color: rgba($white, 0.3);
+    }
 
 
 
