--- a/_src/sass/helpers/_global.scss
+++ b/_src/sass/helpers/_global.scss
@@ -18,6 +18,7 @@ body {
   min-height: 100vh;
   line-height: 1.2;
   background-color: $bg;
+  overflow-y: auto !important;
 }
 
 a {
@@ -132,5 +133,5 @@ button {
 }
 
 * {
-  outline: 1px solid #ff6347;
+  // outline: 1px solid #ff6347;
 }
